# nn-energy

./: .gitignore  Dockerfile  README.md  graphs.py  loop.py  loop.sh  measure.py  network.py  requirements.txt  results.txt  results_auto_old.txt  results_batch.txt  results_c.txt  results_epochs.txt  results_mixed.txt  results_net_size.txt  results_net_size_old.txt  results_size.txt  results_size_old.txt  run_network.sh  run_networkc.sh  test.py  tmp.py  train.py  unet.py
compose/: docker-compose.yaml
compose/dashboards/: sample-dashboard.json
compose/grafana/: sample-dashboard.json
compose/prom/: prometheus.yml
scripts/: run_network.sh
src/cpp/: CMakeLists.txt  Dockerfile  main.cpp  measure.py  requirements.txt  tmp.cpp  trainc.py  unet.cpp  unet.h  utils.h
src/python/: Dockerfile  measure.py  network.py  requirements.txt  test.py  tmp.py  train.py  unet.py
